--- a/Home/Home.Presentation/Home.Presentation.csproj
+++ b/Home/Home.Presentation/Home.Presentation.csproj
@@ -66,9 +66,11 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ButtonGridControl\ButtonGrid.cs" />
+    <Compile Include="ButtonGridControl\ButtonGridItem.cs" />
     <Compile Include="ButtonGridControl\ButtonGridItemView.xaml.cs">
       <DependentUpon>ButtonGridItemView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ButtonGridControl\ButtonGridMatrix.cs" />
     <Compile Include="ButtonGridControl\ButtonGridView.xaml.cs">
       <DependentUpon>ButtonGridView.xaml</DependentUpon>
     </Compile>
@@ -123,7 +125,7 @@
     <Compile Include="Views\AddShoppingView.xaml.cs">
       <DependentUpon>AddShoppingView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="ViewModels\AddShoppingViewModel.cs" />
+    <Compile Include="ViewModels\AddShopping.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -141,7 +143,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\MainWindow.xaml">
+    <Page Include="Views\MainWindowView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -166,10 +168,10 @@
     <Compile Include="ViewModels\ViewShoppingHistory.cs" />
     <Compile Include="ViewModels\IBudgetDynamicViewModel.cs" />
     <Compile Include="LambdaCommand.cs" />
-    <Compile Include="Views\MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
+    <Compile Include="Views\MainWindowView.xaml.cs">
+      <DependentUpon>MainWindowView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="ViewModels\MainWindowViewModel.cs" />
+    <Compile Include="ViewModels\MainWindow.cs" />
     <Compile Include="Views\ProductTree.xaml.cs">
       <DependentUpon>ProductTree.xaml</DependentUpon>
     </Compile>
